kubernetes/deployment/wordpress/wordpress.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app.kubernetes.io/name: "wordpress"
    app.kubernetes.io/instance: "wordpress-001"
    app.kubernetes.io/version: "6.4.3"
    app.kubernetes.io/managed-by: "helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "wordpress"
      app.kubernetes.io/instance: "wordpress-001"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "wordpress"
        app.kubernetes.io/instance: "wordpress-001"
        app.kubernetes.io/version: "6.4.3"
        app.kubernetes.io/managed-by: "helm"
    spec:
      imagePullSecrets: []
      containers:
        - name: wordpress
          image: "wordpress:6.4.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: "/var/www/html"
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wordpress
