kubernetes/deployment/wordpress/wordpress.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app.kubernetes.io/name: "wordpress"
    app.kubernetes.io/instance: "wordpress-001"
    app.kubernetes.io/version: "6.4.3"
    app.kubernetes.io/managed-by: "helm"
spec:
  selector:
    app.kubernetes.io/name: "wordpress"
    app.kubernetes.io/instance: "wordpress-001"
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
