kubernetes/deployment/wordpress/wordpress.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordpress
  name: wordpress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  labels:
    app.kubernetes.io/name: "wordpress"
    app.kubernetes.io/instance: "wordpress-001"
    app.kubernetes.io/version: "6.4.3"
    app.kubernetes.io/managed-by: "helm"
spec:
  ingressClassName: nginx
  rules:
    - host: "polyconseil-demo.carneli.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 8080
  tls:
    - hosts:
        -  "polyconseil-demo.carneli.net"
      secretName: wordpress-tls
